# advent-of-cuda

./: Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
generator/: Cargo.toml
generator/src/: main.rs
gpu/: Cargo.toml
gpu/src/: add.rs  day08.rs  lib.rs
input/: day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt
src/: add.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  gpu_day08.rs  lib.rs
