[package]
name = "advent-of-cuda"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cuda_std = "0.2.2"

[build-dependencies]
cuda_builder = "0.3.0"
