[package]
name = "advent-of-cuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rayon = "1.5.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
cust = "0.3.2"

# We don't depend on these directly, but want to pin them to specific versions.
# This is because we're bound to a specific rustc version but cargo will chose
# the newest semver compatible versions anyway.
byteorder = "=1.4.0"
cc = "=1.0.78"
jobserver = "=0.1.25"
log = "=0.4.17"
rayon-core = "=1.10.0"
regex = "=1.7.1"
regex-syntax = "=0.6.28"
thread_local = "=1.1.4"
tracing-subscriber = "=0.3.17"

[dev-dependencies]
pretty_assertions = "1.4.0"

[target.'cfg(not(target_os = "macos"))'.build-dependencies]
cuda_builder = "0.3.0"

[workspace]
members = [
	"generator",
    "gpu",
]
